[package]
name = "lancedb-jni"
description = "JNI bindings for LanceDB"
version = "0.10.0"
edition = "2021"
authors = ["LanceDB Devs <dev@lancedb.com>"]
license = "Apache-2.0"
repository = "https://github.com/lancedb/lancedb"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lancedb = { path = "../../../rust/lancedb" }
lance = "=0.30.0"
arrow = { version = "55.1", features = ["ffi"] }
arrow-schema = "55.1"
tokio = "1.23"
jni = "0.21.1"
snafu = "0.8"
lazy_static = "1"
serde = { version = "^1" }
serde_json = { version = "1" }
